maze.lessons.maze.wallfollower.WallFollowerMaze.scala.error
Escaper:24: error: Unmatched closing brace '}' ignored here
} 
^Escaper:26: error: eof expected but '}' found.
}
^